--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ z-index: 9999;
 }
 
 #status {
-background-image: url("../img/preloader.gif");
+background-image: url("../img/preloader2.gif");
 background-repeat: no-repeat;
 width: 70px;
 height: 70px;
