--- a/practicas/1/style.css
+++ b/practicas/1/style.css
@@ -17,8 +17,9 @@ section {
     box-shadow: 0px 1px 5px rgba(90, 88, 88, 0.76);
 }
 
-.content-fluid {
-    padding: 65px 19px;
+.full-2 {
+    max-height: 156px;
+    padding: 0;
     margin: .5em;
     border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -26,7 +27,29 @@ section {
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
     box-shadow: 0px 1px 5px rgba(90, 88, 88, 0.76);
-
+    overflow: hidden;
+}
+.full-3 {
+    height: 238px;
+    padding: 0;
+    margin: .5em;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    box-shadow: 0px 1px 5px rgba(90, 88, 88, 0.76); 
+    overflow: hidden;
+}
+.normal-row {
+    height: 74px;
+    padding: 0;
+    overflow: hidden;
+}
+.completo {
+    height: 155px;
+    padding: 0;
+    overflow: hidden
 }
 
 .uno {
@@ -52,4 +75,37 @@ section {
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
 }*/
+
+
+
+.full-3 img {
+    width: 130%;
+    height: 100%;
+}
+
+.full-2 img {
+    max-height: 100%;
+}
+
+.normal-row img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150%;
+    transform: translateY(-20%);
+    -webkit-transform: translateY(-20%);
+    -moz-transform: translateY(-20%);
+    -ms-transform: translateY(-20%);
+    -o-transform: translateY(-20%);
+}
+
+.completo img {
+    height: 190%;
+    width: 100%;
+    transform: translateY(-25%);
+    -webkit-transform: translateY(-25%);
+    -moz-transform: translateY(-25%);
+    -ms-transform: translateY(-25%);
+    -o-transform: translateY(-25%);
+}
 
