--- a/practicas/1/style.css
+++ b/practicas/1/style.css
@@ -79,12 +79,17 @@ section {
 
 
 .full-3 img {
-    width: 130%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     height: 100%;
+    width: 150%;
 }
 
 .full-2 img {
-    max-height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .normal-row img {
@@ -100,7 +105,9 @@ section {
 }
 
 .completo img {
-    height: 190%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     transform: translateY(-25%);
     -webkit-transform: translateY(-25%);
