--- a/u/edgeledger/css/style.css
+++ b/u/edgeledger/css/style.css
@@ -45,6 +45,11 @@ p {
     color: #f4f4f4
 }
 
+.bg-primary {
+    background: #93cb52;
+    color: #fff
+}
+
 .l-heading {
     font-size: 4rem;
     margin-bottom: 0.75rem;
@@ -161,7 +166,12 @@ p {
     height: 100%;
     padding: 0 2rem;
     /* Overlay */
-    background-color: rgba(0, 0, 0, 0.4)
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 /* Section: What we Do */
@@ -205,4 +215,29 @@ p {
     display: block;
     margin: auto;
     width: 60%;
+}
+
+/* Section: Contact */
+#contact {
+    display: flex;
+}
+
+#contact .map,
+#contact .contact-form {
+    flex: 1;
+    flex-basis: 50%
+}
+
+#contact .contact-form .form-group {
+    margin: 0.75rem
+}
+
+#contact .contact-form label {
+    display: block;
+}
+
+#contact .contact-form input,
+#contact .contact-form textarea {
+    width: 100%;
+    padding: 1rem
 }
