--- a/u/practicas/2/style.css
+++ b/u/practicas/2/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'Courgette', sans-serif;
-    color: #000;
+    color: #fff;
     box-sizing: border-box;
     margin: 0;
 }
@@ -99,14 +99,14 @@
 
 .navigation__button {
     background-color: #84DCC6;
-    height: 5rem;
-    width: 5rem;
+    height: 4rem;
+    width: 4rem;
     position: fixed;
-    bottom: 2rem;
-    right: 2rem;
+    bottom: 1.5rem;
+    right: 1.5rem;
     border-radius: 50%;
     z-index: 200;
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, .2)
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, .5)
 }
 
 .navigation__button span {
@@ -121,12 +121,12 @@
 }
 
 .navigation__background {
-    height: 4rem;
-    width: 4rem;
+    height: 3rem;
+    width: 3rem;
     border-radius: 50%;
     position: fixed;
-    bottom: 2.5rem;
-    right: 2.5rem;
+    bottom: 2rem;
+    right: 2rem;
     background-image: radial-gradient(#ff5376, #fd9aae);
     z-index: 99;
     transition: transform .8s;
@@ -138,14 +138,15 @@
     top: 0;
     left: -100%;
     z-index: 101;
+
+    width: 100%;
     opacity: 0;
-    width: 0;
     transition: opacity .8s;
-    transition: left .2s;
-    -webkit-transition: left .2s;
-    -moz-transition: left .2s;
-    -ms-transition: left .2s;
-    -o-transition: left .2s;
+    transition: all .5s;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
 }
 
 .navigation__list {
@@ -195,7 +196,6 @@
 }
 
 .navigation__checkbox:checked~.navigation__nav {
-    width: 100%;
     opacity: 1;
     left: 0;
 }
