finished desktop trillo

--- a/u/trillo/sass/_base.scss
+++ b/u/trillo/sass/_base.scss
@@ -25,6 +25,7 @@ cursive;
     --gris-medio-4: #5f5f5f;
 
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+    --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .2);
 }
 
 * {
