--- a/u/trillo/css/style.css
+++ b/u/trillo/css/style.css
@@ -7,7 +7,8 @@
   --gris-medio-2: #dbdbdb;
   --gris-medio-3: #969696;
   --gris-medio-4: #5f5f5f;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3); }
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .2); }
 
 * {
   margin: 0;
@@ -54,13 +55,33 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: var(--gris-medio-3);
+  background-color: var(--gris-medio-4);
   /*flex: 0 0 18%;*/
   flex-basis: 18%; }
 
 .hotel-view {
-  height: 80rem;
+  background-color: #fff;
   flex: 1; }
+
+.detail {
+  font-size: 1.4rem;
+  display: flex;
+  padding: 5rem;
+  background-color: #f4f4f4;
+  border-bottom: var(--gris-medio-3); }
+
+.description {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 5rem; }
+
+.user-reviews {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .logo {
   display: flex;
@@ -184,7 +205,6 @@ body {
   .side-nav__item:active::before {
     background-color: var(--rosa-claro); }
   .side-nav__link:link, .side-nav__link:visited {
-    font-family: "Courgette", cursive;
     color: #f4f4f4;
     text-decoration: none;
     text-transform: uppercase;
@@ -269,11 +289,177 @@ body {
   -moz-transition: all .2s;
   -ms-transition: all .2s;
   -o-transition: all .2s; }
+  .btn-inline span {
+    margin-left: 3px;
+    transition: margin-left .2s;
+    -webkit-transition: margin-left .2s;
+    -moz-transition: margin-left .2s;
+    -ms-transition: margin-left .2s;
+    -o-transition: margin-left .2s; }
+  .btn-inline:hover {
+    color: var(--gris-medio-4); }
+    .btn-inline:hover span {
+      margin-left: 8px; }
   .btn-inline:hover {
     color: var(--gris-medio-4);
     animation: pulsate 1s infinite;
     -webkit-animation: pulsate 1s infinite; }
   .btn-inline:focus {
+    outline: none; }
+
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem; }
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: 1px solid var(--gris-medio-2);
+  border-bottom: 1px solid var(--gris-medio-2);
+  display: flex;
+  flex-wrap: wrap; }
+  .list__items {
+    flex: 0 0 50%;
+    margin-bottom: .7rem; }
+  .list__items::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: .7rem;
+    background-color: var(--rosa-oscuro);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover; }
+
+.recommend {
+  font-size: 1.3rem;
+  color: var(--gris-medio-4);
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  .recommend__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 3px solid #fff; }
+    .recommend__photo:not(:last-child) {
+      margin-right: -1.5rem; }
+
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden; }
+  .review__text {
+    color: var(--gris-medio-3);
+    font-weight: 500;
+    z-index: 2;
+    position: relative; }
+  .review__user {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem; }
+  .review__photo {
+    margin-right: 2rem;
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%; }
+  .review__user-box {
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+  .review__user-name {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--gris-medio-4);
+    text-transform: uppercase;
+    margin-bottom: .5rem; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--gris-medio-3); }
+  .review__rating {
+    font-size: 2.5rem;
+    color: var(--rosa-oscuro);
+    font-weight: 200; }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.5rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--gris-medio-1);
+    font-family: sans-serif;
+    z-index: 1; }
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center; }
+  .cta__book-now {
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: 300;
+    margin-bottom: 2.5rem; }
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(to left, var(--rosa-oscuro), var(--rosa-claro));
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition: background-img .2s;
+  -webkit-transition: background-img .2s;
+  -moz-transition: background-img .2s;
+  -ms-transition: background-img .2s;
+  -o-transition: background-img .2s; }
+  .btn > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all .2s;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s; }
+  .btn__visible {
+    padding: 2rem 7.5rem; }
+  .btn__invisible {
+    position: absolute;
+    left: 0;
+    top: -100%;
+    padding: 2rem 0; }
+  .btn:hover {
+    background-image: linear-gradient(to right, var(--rosa-oscuro), var(--rosa-claro));
+    animation: pulsate 1s infinite;
+    -webkit-animation: pulsate 1s infinite; }
+  .btn:hover .btn__invisible {
+    top: 0; }
+  .btn:hover .btn__visible {
+    transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    -o-transform: translateY(100%); }
+  .btn:focus {
     outline: none; }
 
 @keyframes pulsate {
