--- a/u/trillo/sass/_components.scss
+++ b/u/trillo/sass/_components.scss
@@ -195,7 +195,7 @@
 
     &__link:link,
     &__link:visited {
-        font-family: $courgette;
+        //font-family: $courgette;
 
         color: #f4f4f4;
         text-decoration: none;
@@ -316,12 +316,28 @@
     display: inline-block;
     background-color: transparent;
     cursor: pointer;
-
     transition: all .2s;
     -webkit-transition: all .2s;
     -moz-transition: all .2s;
     -ms-transition: all .2s;
     -o-transition: all .2s;
+
+    & span {
+        margin-left: 3px;
+        transition: margin-left .2s;
+        -webkit-transition: margin-left .2s;
+        -moz-transition: margin-left .2s;
+        -ms-transition: margin-left .2s;
+        -o-transition: margin-left .2s;
+    }
+
+    &:hover {
+        color: var(--gris-medio-4);
+
+        span {
+            margin-left: 8px;
+        }
+    }
 
 
     &:hover {
@@ -334,6 +350,247 @@
         outline: none;
     }
 }
+
+////////////////////////////////////////////////////
+//    Paragraph
+.paragraph:not(:last-of-type) {
+    margin-bottom: 2rem;
+}
+
+
+
+////////////////////////////////////////////////////
+//      List
+.list {
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: 1px solid var(--gris-medio-2);
+    border-bottom: 1px solid var(--gris-medio-2);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    &__items {
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+
+    &__items::before {
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+
+        // Older browsers
+        // background-image: url(../img/chevron-thin-right.svg);
+        // background-size: cover;
+
+        //Newer Brosers - masks
+        background-color: var(--rosa-oscuro);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+    }
+}
+
+
+////////////////////////////////////////////////////
+//          Recommend
+.recommend {
+    font-size: 1.3rem;
+    color: var(--gris-medio-4);
+
+    display: flex;
+    align-items: center;
+
+    justify-content: space-between;
+
+    &__count {
+        //Truco para distribuir el espacio entre dos elementos
+        //margin-right: auto;
+    }
+
+    &__friends {}
+
+    &__photo {
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+
+        border: 3px solid #fff;
+
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
+    }
+}
+
+////////////////////////////////////////////////////////////////
+//                      REVIEWS
+.review {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+
+    overflow: hidden;
+
+    &__text {
+        color: var(--gris-medio-3);
+        font-weight: 500;
+        z-index: 2;
+        position: relative;
+    }
+
+    &__user {
+        display: flex;
+        align-items: center;
+
+        margin-top: 2rem;
+    }
+
+    &__photo {
+        margin-right: 2rem;
+        height: 4.5rem;
+        width: 4.5rem;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    }
+
+    &__user-box {
+        margin-right: auto;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    &__user-name {
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: var(--gris-medio-4);
+        text-transform: uppercase;
+        margin-bottom: .5rem;
+    }
+
+    &__user-date {
+        font-size: 1rem;
+        color: var(--gris-medio-3)
+    }
+
+    &__rating {
+        font-size: 2.5rem;
+        color: var(--rosa-oscuro);
+        font-weight: 200;
+    }
+
+    &::before {
+        content: "\201C";
+        position: absolute;
+        top: -2.5rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 20rem;
+        color: var(--gris-medio-1);
+        font-family: sans-serif;
+        z-index: 1;
+
+    }
+}
+
+////////////////////////////////////////////////////////////////
+//                      CALL TO ACTION
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now {
+        font-size: 2rem;
+        text-transform: uppercase;
+        font-weight: 300;
+        margin-bottom: 2.5rem
+    }
+}
+
+////////////////////////////////////////////////////////////////
+//                      CALL TO ACTION BUTTON
+.btn {
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    border: none;
+    background-image: linear-gradient(to left, var(--rosa-oscuro), var(--rosa-claro));
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: background-img .2s;
+    -webkit-transition: background-img .2s;
+    -moz-transition: background-img .2s;
+    -ms-transition: background-img .2s;
+    -o-transition: background-img .2s;
+
+    ////
+    &>* {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .2s;
+        -webkit-transition: all .2s;
+        -moz-transition: all .2s;
+        -ms-transition: all .2s;
+        -o-transition: all .2s;
+    }
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem 0;
+    }
+
+    &:hover {
+        background-image: linear-gradient(to right, var(--rosa-oscuro), var(--rosa-claro));
+        animation: pulsate 1s infinite;
+        -webkit-animation: pulsate 1s infinite;
+    }
+
+    &:hover &__invisible {
+        top: 0;
+    }
+
+    &:hover &__visible {
+        transform: translateY(100%);
+        -webkit-transform: translateY(100%);
+        -moz-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+        -o-transform: translateY(100%);
+    }
+
+    &:focus {
+        outline: none;
+    }
+
+}
+
 
 @keyframes pulsate {
     0% {
