--- a/u/trillo/sass/_layout.scss
+++ b/u/trillo/sass/_layout.scss
@@ -29,15 +29,37 @@
     flex-direction: column;
     justify-content: space-between;
 
-    background-color: var(--gris-medio-3);
+    background-color: var(--gris-medio-4);
 
     /*flex: 0 0 18%;*/
     flex-basis: 18%;
 }
 
 .hotel-view {
-
-    height: 80rem;
-
+    background-color: #fff;
     flex: 1;
+}
+
+.detail {
+    font-size: 1.4rem;
+    display: flex;
+    padding: 5rem;
+    background-color: #f4f4f4;
+    border-bottom: var(--gris-medio-3);
+}
+
+.description {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 5rem;
+}
+
+.user-reviews {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
