--- a/u/trillo/sass/_layout.scss
+++ b/u/trillo/sass/_layout.scss
@@ -3,7 +3,13 @@
     margin: 8rem auto;
     background-color: var(--gris-medio-1);
     box-shadow: var(--shadow-dark);
-    min-height: 50rem
+    min-height: 50rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
 
 .header {
@@ -18,10 +24,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media only screen and (max-width: $bp-smallest) {
+        flex-wrap: wrap;
+        height: 10rem;
+        align-content: space-around;
+    }
 }
 
 .content {
     display: flex;
+
+    @media only screen and (max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
 
 .sidebar {
@@ -46,6 +62,14 @@
     padding: 5rem;
     background-color: #f4f4f4;
     border-bottom: var(--gris-medio-3);
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        flex-direction: column;
+    }
 }
 
 .description {
@@ -54,6 +78,16 @@
     padding: 3rem;
     flex: 0 0 60%;
     margin-right: 5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-right: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        margin-right: 0;
+        margin-bottom: 2rem;
+    }
 }
 
 .user-reviews {
