--- a/u/trillo/sass/_base.scss
+++ b/u/trillo/sass/_base.scss
@@ -28,6 +28,12 @@ cursive;
     --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .2);
 }
 
+$bp-largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
+$bp-medium: 56.25em; //900px/16px = 56.25em
+$bp-small :37.5em; //600px / 16px
+$bp-smallest: 31.25em; //500/16px
+
 * {
     margin: 0;
     padding: 0;
@@ -42,6 +48,10 @@ cursive;
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
