--- a/u/trillo/css/style.css
+++ b/u/trillo/css/style.css
@@ -316,17 +316,12 @@ body {
     @media only screen and (max-width: 37.5em) {
       .overview__heading {
         font-size: 1.5rem;
-        padding: 1.25rem 2rem; } }
-    @media only screen and (max-width: 37.5em) {
-      .overview__heading {
-        text-align: center; } }
+        padding: 1.25rem 0rem 1.25rem 2rem;
+        width: 100px; } }
   .overview__stars {
     margin-right: auto;
     display: flex;
     align-items: center; }
-    @media only screen and (max-width: 37.5em) {
-      .overview__stars {
-        margin-left: -1.5rem; } }
   .overview__icon-star, .overview__icon-location {
     width: 1.75rem;
     height: 1.75rem;
