--- a/u/trillo/sass/_components.scss
+++ b/u/trillo/sass/_components.scss
@@ -310,11 +310,8 @@
 
         @media only screen and (max-width: $bp-small) {
             font-size: 1.5rem;
-            padding: 1.25rem 2rem;
-        }
-
-        @media only screen and (max-width: $bp-small) {
-            text-align: center;
+            padding: 1.25rem 0rem 1.25rem 2rem;
+            width: 100px;
         }
     }
 
@@ -323,10 +320,6 @@
         margin-right: auto;
         display: flex;
         align-items: center;
-
-        @media only screen and (max-width: $bp-small) {
-            margin-left: -1.5rem;
-        }
     }
 
     &__icon-star,
